small fix to overflow location

--- a/src/components/layouts/defaultLayout.module.scss
+++ b/src/components/layouts/defaultLayout.module.scss
@@ -19,7 +19,6 @@
   align-items: center;
   padding: 0 16px;
   width: 1024px;
-  overflow: auto;
 }
 
 .skewHome {
@@ -54,7 +53,7 @@
   .sectionWrapper {
     justify-content: unset;
   }
-  // .contentWrapper {
-  //   overflow: hidden;
-  // }
+  .contentWrapper {
+    overflow: auto;
+  }
 }
